k8s/deployment.tpl.yaml
#############################################################################################
######################## APP ################################################################
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  namespace: _APP_ENV
  name: _APP_NAME
  labels:
    app: _APP_NAME
    env: _APP_ENV
    ver: _APP_VERSION
spec:
  replicas: 1
  selector:
    matchLabels:
      app: _APP_NAME
      env: _APP_ENV
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      namespace: _APP_ENV
      labels:
        app: _APP_NAME
        env: _APP_ENV
        ver: _APP_VERSION
    spec:
      imagePullSecrets:
        - name: gcr-json-key
      containers:
        - name: _APP_NAME
          image: gcr.io/_PROJECT_ID/_APP_NAME:_APP_VERSION
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          livenessProbe:
            initialDelaySeconds: 2
            periodSeconds: 5
            httpGet:
              path: /livez
              port: 3000
          readinessProbe:
            initialDelaySeconds: 2
            periodSeconds: 5
            httpGet:
              path: /healthz
              port: 3000
          resources:
            requests:
              cpu: 100m
              memory: 64M
            limits:
              cpu: 1000m
              memory: 256M
---
kind: Service
apiVersion: v1
metadata:
  name: _APP_NAME
  namespace: _APP_ENV
  labels:
    app: _APP_NAME
    env: _APP_ENV
    ver: _APP_VERSION
spec:
  selector:
    app: _APP_NAME
    env: _APP_ENV
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
---
#############################################################################################
######################## ISTIO ##############################################################

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: _APP_ENV
  name: _APP_NAME-gateway
spec:
  hosts:
    - "*"
  gateways:
    - gateway
  http:
    - match:
        - uri:
            prefix: "/_APP_NAME/"
      rewrite:
        uri: "/"
      route:
        - destination:
            host: _APP_NAME
            port:
              number: 3000
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: _APP_ENV
  name: _APP_NAME
spec:
  hosts:
    - _APP_NAME
  http:
    - route:
        - destination:
            host: _APP_NAME
            subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  namespace: _APP_ENV
  name: _APP_NAME
spec:
  host: _APP_NAME
  subsets:
    - name: v1
      labels:
        version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway
  namespace: _APP_ENV
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
